Content fix thanks to Yury

--- a/docs/sql/sfmc-sql-numeric-functions.mdx
+++ b/docs/sql/sfmc-sql-numeric-functions.mdx
@@ -141,7 +141,7 @@ Of course, the formats shown above are not the limit of what you can do. Wheneve
 | Format specifier | Description | Comments |
 | -- | -- | -- |
 | '0' | Zero placeholder | Replaces the zero with the digit if available; otherwise, zero appears in the result string. |
-| '#'' | Number placeholder | Replaces the zero with the digit if available; otherwise, no number appears in the result string. It also ignores not significant zeroes (like leading ones) |
+| '#' | Number placeholder | Replaces the zero with the digit if available; otherwise, no number appears in the result string. It also ignores not significant zeroes (like leading ones) |
 | '.' | Leading point | Informs the format function about desired decimal separator place |
 | '%' | Percentage placeholder | Multiplies the number by 100 and inserts per cent sign in the selected place |
 | '\' | Escape character | Allows you to escape any format specifier symbol if you want it literally in the outcome |
