Update of Contact Deletion article draft

--- a/docs/usecase/sfmc-contact-deletion.mdx
+++ b/docs/usecase/sfmc-contact-deletion.mdx
@@ -2,13 +2,33 @@
 id: sfmc-contact-deletion
 title: SFMC Contact Deletion
 sidebar_label: Contact Deletion Process
-description: ake your Marketing Automation great again by cleaning up your database.
+description: Marketing Automation is as good as the database quality behind it. To have good quality you must first remove the bad quality. Let's do it.
 image: img/og/og-image-sfmc-contact-deletion.png
 tags: [Marketing Cloud, SSJS, SQL, Snippet, Data Extensions, Deliverability]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content="Make your Marketing Automation great again by cleaning up your database." />
+<LeadText content="Marketing Automation is as good as the database quality behind it. To have good quality you must first remove the bad quality. Let's do it." />
 
+## Contact Deletion in SFMC
 
+Salesforce Marketing Cloud makes Contact Deletion not only easy but also powerful. The out-of-the-box solution does the most of the heavy lifting leaving us mostly just the decision who and when should be deleted from our platform.
+
+So what exactly is the out-of-box SFMC Contact Deletion process doing behind the scenes?
+
+### Contact Deletion Configuration
+
+### Manual Contact Deletion
+
+### SFMC API Contact Deletion
+
+### Contact Deletion with Automation Studio
+
+## Enhanced Contact Deletion
+
+### Sync deletions with Salesforce CRM
+
+### Request deletion in child Business Units
+
+### Archive deleted contacts with SQL
